--- a/index.html
+++ b/index.html
@@ -8,18 +8,34 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Weather App</title>
 </head>
 <body onload="onLoad()">
-    <div class="container">
-        <div id="location"></div>
-        <div id="description"></div>
-        <div id="humidity"></div>
-        <div id="pressure"></div>
-        <div id="temperature"></div>
-        <div id="date"></div>
+    <div id="container">
+        <div class="block">
+            <div class="info-container">
+                <p id="location"></p>
+            </div>
+            <div class="info-container">
+                <p id="date"></p>
+            </div>
+            <div class="info-container">
+                <p id="description"></p>
+            </div>
+        </div>
+        <div class="block">
+            <div class="info-container">
+                <p>Temperature: <span id="temperature"></span></p>
+            </div>
+            <div class="info-container">
+                <p>Pressure: <span id="pressure"></span></p>
+            </div>
+            <div class="info-container">
+                <p>Humidity: <span id="humidity"></span></p>
+            </div>
+        </div>
     </div>
+    <div id="loader" class="lds-facebook"><div></div><div></div><div></div></div>
     <script src="/js/index.js"></script>
 </body>
 </html>
